syntax = "proto3";

package NAlice.NBoltalka;

message TNlgSearchFactors {
    float Informativeness = 1 [json_name = "informativeness"];
    float Seq2Seq = 2 [json_name = "seq2seq"];
    float DssmScore = 3 [json_name = "dssm_score"];
}
